--- a/config/crd/patches/webhook_in_projectsets.yaml
+++ b/config/crd/patches/webhook_in_projectsets.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: projectset.migrx.io
+  name: projectsets.project.migrx.io
 spec:
   conversion:
     strategy: Webhook
