--- a/config/rbac/projectset_editor_role.yaml
+++ b/config/rbac/projectset_editor_role.yaml
@@ -12,7 +12,7 @@ metadata:
   name: projectset-editor-role
 rules:
 - apiGroups:
-  - projectset.migrx.io
+  - project.migrx.io
   resources:
   - projectsets
   verbs:
@@ -24,7 +24,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - projectset.migrx.io
+  - project.migrx.io
   resources:
   - projectsets/status
   verbs:
