--- a/config/rbac/projectset_viewer_role.yaml
+++ b/config/rbac/projectset_viewer_role.yaml
@@ -12,7 +12,7 @@ metadata:
   name: projectset-viewer-role
 rules:
 - apiGroups:
-  - projectset.migrx.io
+  - project.migrx.io
   resources:
   - projectsets
   verbs:
@@ -20,7 +20,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - projectset.migrx.io
+  - project.migrx.io
   resources:
   - projectsets/status
   verbs:
