--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -24,7 +24,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - projectset.migrx.io
+  - project.migrx.io
   resources:
   - projectsets
   verbs:
@@ -36,13 +36,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - projectset.migrx.io
+  - project.migrx.io
   resources:
   - projectsets/finalizers
   verbs:
   - update
 - apiGroups:
-  - projectset.migrx.io
+  - project.migrx.io
   resources:
   - projectsets/status
   verbs:
