--- a/config/samples/project_v1alpha1_projectset.yaml
+++ b/config/samples/project_v1alpha1_projectset.yaml
@@ -3,10 +3,16 @@ kind: ProjectSet
 metadata:
   labels:
     app.kubernetes.io/name: projectset
-    app.kubernetes.io/instance: projectset-sample
+    app.kubernetes.io/instance: projectset
     app.kubernetes.io/part-of: projectset-operator
     app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/created-by: projectset-operator
-  name: test-projectset
+  name: devteam-projectset
 spec:
-  namespace: test
+  namespace: dev-app
+  labels:
+    app: frontend
+    stage: dev
+  annotations:
+    app.kubernetes.io/name: dev-app 
+    app.kubernetes.io/lang: golang 
