--- a/config/samples/project_v1alpha1_projectset_quota_limit.yaml
+++ b/config/samples/project_v1alpha1_projectset_quota_limit.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/part-of: projectset-operator
     app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/created-by: projectset-operator
+    app.kubernetes.io/new: stub
   name: devteam-projectset-with-quota-and-limit
 spec:
   namespace: dev-app-with-quota-and-limit
