add projectsetsync api and controller

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -93,3 +93,29 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - project.migrx.io
+  resources:
+  - projectsetsyncs
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - project.migrx.io
+  resources:
+  - projectsetsyncs/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - project.migrx.io
+  resources:
+  - projectsetsyncs/status
+  verbs:
+  - get
+  - patch
+  - update
