--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples of your project ##
 resources:
 - project_v1alpha1_projectset.yaml
+- project_v1alpha1_projectsetsync.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
