--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -4,6 +4,7 @@
 resources:
 - bases/project.migrx.io_projectsets.yaml
 - bases/project.migrx.io_projectsetsyncs.yaml
+- bases/project.migrx.io_projectsettemplates.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -11,12 +12,14 @@ patches:
 # patches here are for enabling the conversion webhook for each CRD
 #- path: patches/webhook_in_projectsets.yaml
 #- path: patches/webhook_in_projectsetsyncs.yaml
+#- path: patches/webhook_in_projectsettemplates.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- path: patches/cainjection_in_projectsets.yaml
 #- path: patches/cainjection_in_projectsetsyncs.yaml
+#- path: patches/cainjection_in_projectsettemplates.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
