--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -68,6 +68,17 @@ rules:
   - update
   - watch
 - apiGroups:
+  - ""
+  resources:
+  - rolebinding
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - update
+  - watch
+- apiGroups:
   - project.migrx.io
   resources:
   - projectsets
