--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -107,6 +107,18 @@ rules:
 - apiGroups:
   - project.migrx.io
   resources:
+  - projectsetstemplate
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - project.migrx.io
+  resources:
   - projectsetsyncs
   verbs:
   - create
