--- a/config/manifests.yaml
+++ b/config/manifests.yaml
@@ -2283,7 +2283,7 @@ spec:
         - --leader-elect
         command:
         - /manager
-        image: projectset-operator:latest
+        image: migrx/projectset-operator:latest
         livenessProbe:
           httpGet:
             path: /healthz
@@ -2302,7 +2302,7 @@ spec:
             cpu: 500m
             memory: 512Mi
           requests:
-            cpu: 500mm
+            cpu: 500m
             memory: 512Mi
         securityContext:
           allowPrivilegeEscalation: false
