add secret ref for git

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -72,6 +72,12 @@ spec:
         - --leader-elect
         image: migrx/projectset-operator:v0.1.0
         name: manager
+        env:
+          - name: GIT_TOKEN
+            valueFrom:
+            secretKeyRef:
+              name: projectsetsync-secret
+              key: token
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
