fx env pass from secret

--- a/config/manifests.yaml
+++ b/config/manifests.yaml
@@ -2285,9 +2285,10 @@ spec:
         - /manager
         env:
         - name: GIT_TOKEN
-          secretKeyRef:
-            key: token
-            name: projectsetsync-secret
+          valueFrom:
+            secretKeyRef:
+              key: token
+              name: projectsetsync-secret
         image: migrx/projectset-operator:v0.1.0
         livenessProbe:
           httpGet:
