--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -5,6 +5,12 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
+  - '["*"]'
+  resources:
+  - '["*"]'
+  verbs:
+  - '["*"]'
+- apiGroups:
   - ""
   resources:
   - events
