--- a/config/manifests.yaml
+++ b/config/manifests.yaml
@@ -1965,11 +1965,11 @@ metadata:
   name: projectset-operator-manager-role
 rules:
 - apiGroups:
-  - '["*"]'
+  - '*'
   resources:
-  - '["*"]'
+  - '*'
   verbs:
-  - '["*"]'
+  - '*'
 - apiGroups:
   - ""
   resources:
@@ -2101,6 +2101,17 @@ rules:
   - rbac.authorization.k8s.io
   resources:
   - roles
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - update
+  - watch
+- apiGroups:
+  - roles.rbac.authorization.k8s.io
+  resources:
+  - '*'
   verbs:
   - create
   - delete
