--- a/config/manifests.yaml
+++ b/config/manifests.yaml
@@ -2307,6 +2307,7 @@ spec:
               key: token
               name: projectsetsync-secret
         image: migrx/projectset-operator:v0.1.0
+        imagePullPolicy: Always
         livenessProbe:
           httpGet:
             path: /healthz
