--- a/config/samples/project_v1alpha1_projectset_network_policy.yaml
+++ b/config/samples/project_v1alpha1_projectset_network_policy.yaml
@@ -17,7 +17,7 @@ spec:
     app.kubernetes.io/name: dev-app                                                                            
     app.kubernetes.io/lang: golang  
 
-  policySpec:
+  networkPolicy:
 
     allow-dns:
       podSelector:
