--- a/config/samples/project_v1alpha1_projectset_roles.yaml
+++ b/config/samples/project_v1alpha1_projectset_roles.yaml
@@ -17,7 +17,7 @@ spec:
     app.kubernetes.io/name: dev-app                                                                            
     app.kubernetes.io/lang: golang  
 
-  roleRules:
+  roles:
     developer:
       - apiGroups:
           - ""
