--- a/config/manifests.yaml
+++ b/config/manifests.yaml
@@ -1,16 +1,16 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  labels:
-    app.kubernetes.io/component: manager
-    app.kubernetes.io/created-by: projectset-operator
-    app.kubernetes.io/instance: system
-    app.kubernetes.io/managed-by: kustomize
-    app.kubernetes.io/name: namespace
-    app.kubernetes.io/part-of: projectset-operator
-    control-plane: controller-manager
-  name: projectset-operator-system
----
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   labels:
+#     app.kubernetes.io/component: manager
+#     app.kubernetes.io/created-by: projectset-operator
+#     app.kubernetes.io/instance: system
+#     app.kubernetes.io/managed-by: kustomize
+#     app.kubernetes.io/name: namespace
+#     app.kubernetes.io/part-of: projectset-operator
+#     control-plane: controller-manager
+#   name: projectset-operator-system
+# ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
